frontend/src/App.css
#app {
    height: 100vh;
    text-align: center;
}

#logo {
    display: block;
    width: 50%;
    height: 50%;
    margin: auto;
    padding: 10% 0 0;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-origin: content-box;
}

.result {
    height: 20px;
    line-height: 20px;
    margin: 1.5rem auto;
}

.input-box .btn {
    width: 60px;
    height: 30px;
    line-height: 30px;
    border-radius: 3px;
    border: none;
    margin: 0 0 0 20px;
    padding: 0 8px;
    cursor: pointer;
}

.input-box .btn:hover {
    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
    color: #333333;
}

.input-box .input {
    border: none;
    border-radius: 3px;
    outline: none;
    height: 30px;
    line-height: 30px;
    padding: 0 10px;
    background-color: rgba(240, 240, 240, 1);
    -webkit-font-smoothing: antialiased;
}

.input-box .input:hover {
    border: none;
    background-color: rgba(255, 255, 255, 1);
}

.input-box .input:focus {
    border: none;
    background-color: rgba(255, 255, 255, 1);
}


.logo-icon {
    display: inline-block;
    width: 70px;
    height: 70px;
    background-size: cover;
  }
.logo-icon:hover,
.logo-icon:focus {
    filter: invert(100%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(100%);
    cursor: pointer;
}

.logo-icon-df {
    display: inline-block;
    width: 70px;
    height: 70px;
    background-size: cover;
  }
.logo-icon-df:hover,
.logo-icon-df:focus {
    filter: grayscale(100%) invert(30%) saturate(50%) hue-rotate(90deg);
    cursor: pointer;
}

.account-switch {
}
.account-switch:hover,
.account-switch:focus {
   filter: grayscale(100%) invert(30%) saturate(50%) hue-rotate(90deg);
   cursor: pointer;
}

.shrinkable {
    visibility: hidden;
}
.shrinkable:disabled {
    transform: scale( 10% ) translateX( 0px );
    transition: 1s;
}

@keyframes fadeOut {
    0% {
        visibility: visible;
        opacity: 1;
    }

    50% {
        visibility: visible;
        opacity: 0.5;
    }

    100% {
        visibility: hidden;
        opacity: 0;
    }
}

.mnemonic {
    text-Shadow: '0 0 28px #000'
}
.mnemonic:hover {
    text-Shadow: '0 0 1px #000'
}

